--- a/app/src/main/res/layout/product_category_item_view.xml
+++ b/app/src/main/res/layout/product_category_item_view.xml
@@ -2,10 +2,11 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/category_container"
     android:layout_width="@dimen/_96sdp"
     android:layout_height="@dimen/_146sdp"
-    android:id="@+id/category_container"
     android:layout_marginHorizontal="@dimen/space_small"
+    app:cardBackgroundColor="?attr/itemBackgroundColor"
     app:cardCornerRadius="@dimen/space_small"
     app:cardElevation="@dimen/space_very_small"
     app:strokeWidth="0dp">
