--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,9 @@
     <style name="Widget.Market" parent="@android:style/Widget.Material" />
 
     <style name="Widget.Market.AppBar" parent="@style/Widget.Material3.AppBarLayout">
-        <item name="android:backgroundTint">?attr/colorSurface</item>
-        <item name="android:elevation">@dimen/space_small</item>
+        <item name="elevation">@dimen/space_medium</item>
+        <item name="android:elevation">@dimen/space_medium</item>
+
     </style>
 
     <style name="Widget.Market.Button" parent="Widget.Material3.Button">
