--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -17,7 +17,7 @@
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/to_searchFragment"
-            app:destination="@id/searchFragment" />
+            app:destination="@id/search_navigation" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
@@ -33,13 +33,40 @@
         android:name="ir.jatlin.topmarket.ui.categories.ProductCategoryFragment"
         android:label="fragment_product_category"
         tools:layout="@layout/fragment_product_category" />
-    <fragment
-        android:id="@+id/searchFragment"
-        android:name="ir.jatlin.topmarket.ui.search.SearchFragment"
-        android:label="SearchFragment"
-        tools:layout="@layout/fragment_search" >
-        <action
-            android:id="@+id/to_productDetailsFragment"
-            app:destination="@id/productDetailsFragment" />
-    </fragment>
+
+
+    <navigation
+        android:id="@+id/search_navigation"
+        app:startDestination="@id/searchFragment">
+        <fragment
+            android:id="@+id/searchFragment"
+            android:name="ir.jatlin.topmarket.ui.search.SearchFragment"
+            android:label="SearchFragment"
+            tools:layout="@layout/fragment_search">
+            <action
+                android:id="@+id/to_productDetailsFragment"
+                app:destination="@id/productDetailsFragment" />
+            <action
+                android:id="@+id/to_searchFiltersFragment"
+                app:destination="@id/searchFiltersFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:launchSingleTop="true"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"
+                app:popUpTo="@id/homeFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/searchFiltersFragment"
+            android:name="ir.jatlin.topmarket.ui.search.filter.SearchFiltersFragment"
+            android:label="SearchFiltersFragment"
+            tools:layout="@layout/fragment_search_filters">
+            <argument
+                android:name="categoryId"
+                android:defaultValue="-1"
+                app:argType="integer" />
+        </fragment>
+    </navigation>
+
+
 </navigation>
