feat(slider): Create new circle view as an indicator of slider

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,11 @@
     <declare-styleable name="Theme">
         <attr name="itemBackgroundColor" format="color" />
     </declare-styleable>
+
+
+    <declare-styleable name="CircleIndicatorView">
+        <attr name="radius" format="float" />
+    </declare-styleable>
+
+
 </resources>
