feat(search): Create the product preview
in progress

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="category_image_height">@dimen/_100sdp</dimen>
     <dimen name="include_search_appbar_height">@dimen/_48sdp</dimen>
 
+    <dimen name="hair_line">@dimen/_2sdp</dimen>
+
 
 </resources>
