--- a/app/src/main/res/layout/product_preview_item_view.xml
+++ b/app/src/main/res/layout/product_preview_item_view.xml
@@ -65,6 +65,49 @@
         tools:layout_editor_absoluteY="109dp"
         tools:text="تلویزیون ال ای دی ایکس ویژن مدل 24XS450 سایز 24 اینچ" />
 
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/product_stock_status"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/space_medium"
+        android:drawablePadding="@dimen/space_very_small"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
+        android:textColor="#00796B"
+        app:drawableEndCompat="@drawable/ic_instock_24"
+        app:layout_constraintEnd_toEndOf="@id/glv_separator"
+        app:layout_constraintTop_toBottomOf="@id/product_name"
+        tools:ignore="TextContrastCheck"
+        tools:text="@string/product_avaialble"
+        tools:textColor="?attr/colorAccent" />
+
+    <ImageView
+        android:id="@+id/product_rating_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_star_rate_24"
+        app:layout_constraintBottom_toBottomOf="@id/product_stock_status"
+        app:layout_constraintStart_toStartOf="@id/glv_start"
+        app:layout_constraintTop_toBottomOf="@id/product_name"
+        app:layout_constraintTop_toTopOf="@id/product_stock_status" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/product_avg_rating"
+        style="@style/TextAppearance.MarketApp.LabelSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/space_very_small"
+        android:layout_marginEnd="@dimen/space_very_small"
+        android:text="@{viewModel.productDetails.averageRating}"
+        app:layout_constraintBottom_toBottomOf="@id/product_rating_image"
+        app:layout_constraintStart_toEndOf="@id/product_rating_image"
+        app:layout_constraintTop_toTopOf="@id/product_rating_image"
+        tools:layout_editor_absoluteY="42dp"
+        tools:text="4.5" />
+
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glv_start"
         android:layout_width="wrap_content"
