feat(search): Design product preview for both searching and displaying a category products

--- a/app/src/main/res/layout/product_preview_item_view.xml
+++ b/app/src/main/res/layout/product_preview_item_view.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_200sdp"
-    android:layout_margin="@dimen/space_medium"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/_180sdp"
+    android:maxHeight="@dimen/_180sdp"
     android:paddingVertical="@dimen/space_medium">
 
     <androidx.constraintlayout.widget.Guideline
@@ -46,7 +47,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
         app:layout_constraintStart_toStartOf="@id/glv_separator"
-        app:layout_constraintTop_toTopOf="@id/special_sale"
+        app:layout_constraintTop_toTopOf="@id/barrier_top"
         tools:background="@color/black" />
 
 
@@ -70,6 +71,7 @@
         android:id="@+id/product_stock_status"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/space_small"
         android:layout_marginTop="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/space_medium"
         android:drawablePadding="@dimen/space_very_small"
@@ -77,6 +79,7 @@
         android:textColor="#00796B"
         app:drawableEndCompat="@drawable/ic_instock_24"
         app:layout_constraintEnd_toEndOf="@id/glv_separator"
+        app:layout_constraintStart_toEndOf="@id/product_avg_rating"
         app:layout_constraintTop_toBottomOf="@id/product_name"
         tools:ignore="TextContrastCheck"
         tools:text="@string/product_avaialble"
@@ -106,6 +109,56 @@
         app:layout_constraintTop_toTopOf="@id/product_rating_image"
         tools:layout_editor_absoluteY="42dp"
         tools:text="4.5" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/product_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_medium"
+        android:drawablePadding="@dimen/space_very_small"
+        android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
+        android:textStyle="bold"
+        app:drawableStartCompat="@drawable/ic_toman"
+        app:layout_constraintBottom_toTopOf="@+id/product_regular_price"
+        app:layout_constraintEnd_toStartOf="@+id/product_discount"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toEndOf="@id/glv_start"
+        app:layout_constraintStart_toStartOf="@id/glv_start"
+        app:layout_constraintTop_toBottomOf="@+id/product_stock_status"
+        app:layout_constraintVertical_bias="0.7"
+        tools:text="4,000,000" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/product_regular_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_small"
+        android:alpha="0.5"
+        android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/product_price"
+        app:layout_constraintTop_toBottomOf="@+id/product_price"
+        tools:ignore="TextContrastCheck"
+        tools:text="4,000,000 "
+        tools:visibility="visible" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/product_discount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/space_medium"
+        android:background="?attr/colorError"
+        android:paddingHorizontal="@dimen/_8sdp"
+        android:paddingVertical="@dimen/_4sdp"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
+        android:textColor="?attr/colorOnError"
+        app:layout_constraintBottom_toBottomOf="@+id/product_price"
+        app:layout_constraintEnd_toEndOf="@id/glv_separator"
+        app:layout_constraintStart_toEndOf="@+id/product_price"
+        app:layout_constraintTop_toTopOf="@+id/product_price"
+        tools:text="25%" />
 
 
     <androidx.constraintlayout.widget.Guideline
