--- a/app/src/main/res/layout/product_preview_item_view.xml
+++ b/app/src/main/res/layout/product_preview_item_view.xml
@@ -4,9 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/_180sdp"
     android:maxHeight="@dimen/_180sdp"
+    android:minHeight="@dimen/_180sdp"
     android:paddingVertical="@dimen/space_medium">
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="special_divider" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glv_separator"
@@ -22,12 +29,12 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="2"
+        android:text="@string/special_sale"
         android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
         android:textColor="?attr/colorError"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
         app:layout_constraintStart_toStartOf="@id/glv_start"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/special_sale" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/special_divider"
@@ -119,7 +126,7 @@
         android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
         android:textStyle="bold"
         app:drawableStartCompat="@drawable/ic_toman"
-        app:layout_constraintBottom_toTopOf="@+id/product_regular_price"
+        app:layout_constraintBottom_toTopOf="@+id/barrier_bottom"
         app:layout_constraintEnd_toStartOf="@+id/product_discount"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -177,11 +184,11 @@
         app:layout_constraintGuide_end="@dimen/space_medium" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_top"
+        android:id="@+id/barrier_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="special_divider" />
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="product_regular_price" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_special"
