--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="category_image_height">@dimen/_100sdp</dimen>
     <dimen name="include_search_appbar_height">@dimen/_48sdp</dimen>
 
+    <dimen name="slider_image_corner_size">@dimen/space_small</dimen>
+    <dimen name="slider_height">@dimen/_128sdp</dimen>
 
 </resources>
