--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,11 @@
         <!-- Widget style -->
         <item name="bottomNavigationStyle">@style/Widget.Market.BottomNavigationView</item>
     </style>
+
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/slider_image_corner_size</item>
+    </style>
+
+
 </resources>
