--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="Theme">
         <attr name="itemBackgroundColor" format="color" />
+        <attr name="indicatorBackgroundColor" format="color" />
     </declare-styleable>
 
 
