--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,6 +13,7 @@
 
         <!-- background of some views(e.g search content scrim, etc. -->
         <item name="itemBackgroundColor">@color/background_gray_dark</item>
+        <item name="indicatorBackgroundColor">@color/background_gray_dark</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
