--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,7 @@
         <item name="elevationOverlayEnabled">false</item>
 
         <item name="itemBackgroundColor">@color/background_gray_light</item>
+        <item name="indicatorBackgroundColor">@color/background_gray_dark</item>
 
         <!-- Widget style -->
         <item name="bottomNavigationStyle">@style/Widget.Market.BottomNavigationView</item>
