fix(search): Fix constraint and addToCard font size

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,7 @@
 
     <style name="Widget.Market.Button" parent="Widget.Material3.Button">
         <item name="fontFamily">@font/samim_fd</item>
+        <item name="android:textAppearance">@style/TextAppearance.MarketApp.BodySmall</item>
     </style>
 
     <style name="Widget.Market.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
