--- a/app/src/main/res/layout/fragment_search_filters.xml
+++ b/app/src/main/res/layout/fragment_search_filters.xml
@@ -14,11 +14,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="@dimen/space_medium"
         android:paddingVertical="@dimen/space_small"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_behavior="@string/bottom_sheet_behavior"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/product_preview_item_view" />
 
 
