--- a/app/src/main/res/layout/filter_search_appbar.xml
+++ b/app/src/main/res/layout/filter_search_appbar.xml
@@ -87,7 +87,7 @@
                 style="@style/TextAppearance.MarketApp.BodySmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_small"
+                android:layout_marginTop="@dimen/space_medium"
                 android:layout_marginEnd="@dimen/space_small"
                 android:drawableEnd="@drawable/ic_filter_24"
                 android:drawablePadding="@dimen/space_small"
