--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,7 @@
     <color name="transparent">#0fff</color>
     <color name="background_gray_light">#f0f0f1</color>
     <color name="background_gray_dark">#64646D</color>
+    <color name="digi_red_color_500">#EF4056</color>
+    <color name="digi_red_color_700">#E12F2F</color>
     <color name="amazing_suggestion_background_color">#EF3F55</color>
 </resources>
