--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,12 @@
     <color name="transparent">#0fff</color>
     <color name="background_gray_light">#f0f0f1</color>
     <color name="background_gray_dark">#64646D</color>
+
+    <color name="digi_red_color_500">#D32F2F</color>
+    <color name="digi_red_color_700">#D32F2F</color>
+
+    <color name="digi_blue_200">#19BFD4</color>
+    <color name="digi_blue_700">#0097A7</color>
+
     <color name="amazing_suggestion_background_color">#EF3F55</color>
 </resources>
